# amaz_ctrl

./: .gitignore  pyproject.toml
docs/: gui_how_to.md
docs/assets/: saving_tree
src/amaz_ctrl/: exp_params.json
src/amaz_ctrl/example/: dummy_pid_client.py  dummy_pid_server.py
src/amaz_ctrl/example/pid_client-server/: dummy_pid_client.py  dummy_pid_server.py
src/amaz_ctrl/example/script_client_server/: simple_script.py  simple_script_server.py
src/amaz_ctrl/exemple/: dummy_pid.py
src/amaz_ctrl/gui/: app.py
src/amaz_ctrl/gui/models/: .cached_scan_params.json  mainmodel.py  parameter.py  server_connector.py
src/amaz_ctrl/gui/views/: buttons_widget.py  info_widget.py  log_widget.py  mainwidget.py  mainwindow.py  parameters_widget.py  plot_widget.py
src/amaz_ctrl/gui/views/dialogs/: about.py  help.py
src/amaz_ctrl/scripts/: amaz_script.py  amazing_script.py  example.py  exp_params.json  scanned_params.json
src/amaz_ctrl/scripts/base/: amaz_script.py  dummy_script.py
src/amaz_ctrl/server/: amaz_server.py  pid_rb_cell_server.py  pid_rb_temp_server.py  pid_server.py  script_server.py
src/amaz_ctrl/tools/: amaz_exception.py  amaz_logs.py  misc.py
tests/: script_server_test.py  script_test.py
