[project]
name = "amaz-ctrl"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor",email = "victor.gondret@posteo.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "qdarkstyle (>=3.2.3,<4.0.0)",
    "pyro5 (>=5.16,<6.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "pyqt6 (>=6.11.0,<7.0.0)",
    "pyserial (>=3.5,<4.0)",
   
]

[tool.poetry]
packages = [{include = "amaz_ctrl", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (<8.4.0)"
]
